[workspace]
members = [
    "iso13400-2",
    "iso14229-1",
    "iso15765-2",
]

resolver = "2"

[workspace.package]
version = "0.1.0-alpha8"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["Jesse Smith <jesses2025smith@gmail.com>"]
repository = "https://github.com/jesses2025smith/ecu-proto-rs"

[workspace.dependencies]
bitflags = "2.6"
bitfield-struct = "0.11"
getset = "0.1"
hex = "0.4"
lazy_static = "1"
log = "0.4"
rsutil = "0.1"
rs-can = "0.2"
thiserror = "2"

# dev-dependencies
anyhow = "1"