[workspace]
members = [
    "iso13400-2",
    "iso14229-1",
    "iso15765-2",
]

resolver = "2"

[workspace.package]
version = "0.1.0-b3"
edition = "2021"
license = "MIT OR LGPL-3.0"
authors = ["Jesse Smith <jesses2025smith@gmail.com>"]
repository = "https://github.com/jesses2025smith/iso-std-rs"

[workspace.dependencies]
async-trait = "0.1"
bitfield-struct = "0.11"
bitflags = "2.9"
bytes =  "1.10"
getset = "0.1"
hex = "0.4"
log = "0.4"
rs-can = "0.3.0"
rsutil = "0.1"
serde = "1"
stream-cancel = "0.8"
#task-supervisor = "0.3"     # tokio任务监视
thiserror = "2"
tokio = "1"
tokio-stream = "0.1"

# dev-dependencies
anyhow = "1"
