[package]
name = "iso14229-1"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A ISO 14229-1 protocol."
homepage = "https://github.com/jesses2025smith/ecu-proto-rs/tree/develop/is14229-1"
repository.workspace = true
keywords = [
    "automotive",
    "UDS",
    "ISO14229",
    "DoCAN"
]

[dependencies]
bitfield-struct = { workspace = true }
bitflags = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rsutil = { workspace = true, features = ["log", "types", "macros"] }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ["std2020"]

#std2004 = []
std2006 = []
std2013 = []
std2020 = []
session_data_check = []
