[package]
name = "iso15765-2"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ISO-TP trait define."
homepage = "https://github.com/jesses2025smith/ios-std-rs/tree/develop/is15765-2"
repository.workspace = true
keywords = [
    "automotive",
    "UDS",
    "ISO15765",
    "ISO-TP",
]

[dependencies]
async-trait = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rsutil = { workspace = true, features = ["log"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }

[dependencies.rs-can]
workspace = true
optional = true

[features]
default = ["can", "std2004"]

can = ["rs-can"]
can-fd = ["can"]
std2004 = []
std2016 = []
