[package]
name = "iso15765-2"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ISO-TP trait define."
homepage = "https://github.com/jesses2025smith/ios-std-rs/tree/develop/is15765-2"
repository.workspace = true
keywords = [
    "automotive",
    "UDS",
    "ISO15765",
    "ISO-TP",
]

[dependencies]
async-trait = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rsutil = { workspace = true, features = ["log"] }
stream-cancel = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }

[dependencies.rs-can]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[features]
default = ["can", "std2004"]

can = ["rs-can", "serde"]
can-fd = ["can", "serde"]
std2004 = []
std2016 = []
